syntax = "proto3";

package bread;

import "operator.proto";

option go_package = "breadpb";

service Deploy {
	option (operator.name) = "deploy";

	rpc ListTargets(ListTargetsRequest) returns (operator.Response);
	rpc ListBuilds(ListBuildsRequest) returns (operator.Response);
	rpc Trigger(TriggerRequest) returns (operator.Response);
}

message ListTargetsRequest {
	operator.Request request = 1;
}

message ListBuildsRequest {
	operator.Request request = 1;
	string target = 2;
	string branch = 3;
}

message TriggerRequest {
	operator.Request request = 1;
	string target = 2;
	string build = 3;
}
